2009-07-06  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/src/calDavCalendar.js: bypass safeRefresh as
	long as the ACLs are not loaded (Inverse edition).

2009-07-03  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/content/agenda-listbox.js
	(deleteItemsFromCalendar): we cannot duplicate the array of nodes
	with Array.splice with Mozilla 1.8, therefore we wander the
	nodeList reversely.

2009-07-03  Ludovic Marcotte <lmarcotte@inverse.ca>

	* Added patch for bug #453145

2009-07-02  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/src/calDavCalendar.js (safeRefresh): fixed
	issues with unavailable calendars. (#502014)

2009-06-30  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/src/calIcsParser.js: added a new
	"sanitizeICSValue" that pre-parse the ICS string in order to fix
	errors that are not handled by libical.

	* src/calendar/base/src/calStorageCalendar.js (writeEvent): be
	tolerant for events which don't have a start or an end date.
	Replace them with an empty string.

	* src/calendar/base/src/calDavCalendar.js: webdav sync: do not try
	to delete items which are not present in the item id cache. Added
	new "finalizeUpdatedItems" with code executed when a safeRefresh
	is concluded. Call that new method from the
	getUpdatedItem_WebdavSync method too.

	* src/calendar/base/src/calCalendarManager.js: we do not post
	"onCalendarRegistered" notifications on new calendars before their
	cache is initialized.

2009-06-29  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/content/calendar-invitations-manager.js:
	only refreshs the enabled calendars (first inclusion).

	* src/calendar/base/content/calendar-multiday-view.xml
	(deleteItemsFromCalendar): duplicate the mEventInfos array so as
	to be able to wander through the array "normally" without having
	to keep the index count up-to-date.

	* src/calendar/base/content/calendar-month-view.xml